[tool.poetry]
name = "swept"
version = "0.1.0"
description = ""
authors = ["Fabian Torres"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
ipython = "^8.4.0"
ipdb = "^0.13.9"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
